fixed ipad toolbar styles to remove icons so logout will no longer get pushed off screen

--- a/src/Components/Toolbar/mainButtonGroup.module.scss
+++ b/src/Components/Toolbar/mainButtonGroup.module.scss
@@ -18,7 +18,7 @@
 
 .btn_sm_hide {
 	@extend .btn_style;
-	@media (max-width: 1000px) {
+	@media (max-width: 1025px) {
 		display: none;
 	}
 }
